--- a/upwork_job_2/manifest.json
+++ b/upwork_job_2/manifest.json
@@ -12,7 +12,8 @@
 
   "permissions": [
     "contextMenus",
-    "tabs"
+    "tabs",
+    "activeTab"
   ],
 
   "background": {
@@ -22,8 +23,12 @@
 
   "content_scripts": [
     {
-    "matches": ["<all_urls>"],
-    "js": ["script.js"]
+      "matches": ["https://selling.autotrader.co.uk"],
+      "js": ["script.js"]
+    },
+    {
+      "matches": ["https://www.copart.co.uk/"],
+      "js": ["script2.js"]
     }
   ]
 }
